--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -5,6 +5,9 @@
 \usepackage{relsize}
 \usepackage{xspace}
 
+% kerning and overflow adjustments
+\usepackage{microtype}
+
 \definecolor{tableheadcolor}{rgb}{0.8,0.8,1.0}
 %\definecolor{tablealtcolor}{rgb}{0.9,0.9,1.0}
 \definecolor{tablealtcolor}{rgb}{0.9,0.9,0.95}
@@ -198,3 +201,16 @@
 \newcommand{\pcsourceszsp}{21.7}
 \newcommand{\nsourcesrlf}{24~743}
 \newcommand{\nnewgiants}{40}
+
+
+% hyphenation rules
+\babelhyphenation{
+astro-infor-matics
+Wide-field
+Kilo-metre
+Path-find-er
+pre-cursor
+Austra-lian
+tele-scopes
+cons-tructed
+}
