--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -5435,3 +5435,23 @@ this scenario. In this paper we describe a probabilistic approach for supervised
 	pages = {1297--1322},
 	file = {Fulltext PDF:C\:\\Users\\matthew\\Zotero\\storage\\ZBBP37NB\\Raykar et al. - 2010 - Learning From Crowds.pdf:application/pdf}
 }
+
+@article{bonaldi_square_2020,
+	title = {Square {Kilometre} {Array} {Science} {Data} {Challenge} 1: analysis and results},
+	volume = {500},
+	issn = {0035-8711, 1365-2966},
+	shorttitle = {Square {Kilometre} {Array} {Science} {Data} {Challenge} 1},
+	url = {http://arxiv.org/abs/2009.13346},
+	doi = {10.1093/mnras/staa3023},
+	abstract = {As the largest radio telescope in the world, the Square Kilometre Array (SKA) will lead the next generation of radio astronomy. The feats of engineering required to construct the telescope array will be matched only by the techniques developed to exploit the rich scientific value of the data. To drive forward the development of efficient and accurate analysis methods, we are designing a series of data challenges that will provide the scientific community with high-quality datasets for testing and evaluating new techniques. In this paper we present a description and results from the first such Science Data Challenge (SDC1). Based on SKA MID continuum simulated observations and covering three frequencies (560 MHz, 1400MHz and 9200 MHz) at three depths (8 h, 100 h and 1000 h), SDC1 asked participants to apply source detection, characterization and classification methods to simulated data. The challenge opened in November 2018, with nine teams submitting results by the deadline of April 2019. In this work we analyse the results for 8 of those teams, showcasing the variety of approaches that can be successfully used to find, characterise and classify sources in a deep, crowded field. The results also demonstrate the importance of building domain knowledge and expertise on this kind of analysis to obtain the best performance. As high-resolution observations begin revealing the true complexity of the sky, one of the outstanding challenges emerging from this analysis is the ability to deal with highly resolved and complex sources as effectively as the unresolved source population.},
+	number = {3},
+	urldate = {2021-03-07},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Bonaldi, A. and An, T. and Bruggen, M. and Burkutean, S. and Coelho, B. and Goodarzi, H. and Hartley, P. and Sandhu, P. K. and Wu, C. and Yu, L. and Haghighi, M. H. Zhoolideh and Anton, S. and Bagheri, Z. and Barbosa, D. and Barraca, J. P. and Bartashevich, D. and Bergano, M. and Bonato, M. and Brand, J. and de Gasperin, F. and Giannetti, A. and Dodson, R. and Jain, P. and Jaiswal, S. and Lao, B. and Liu, B. and Liuzzo, E. and Lu, Y. and Lukic, V. and Maia, D. and Marchili, N. and Massardi, M. and Mohan, P. and Morgado, J. B. and Panwar, M. and Prabhakar and Ribeiro, V. A. R. M. and Rygl, K. L. J. and Ali, V. Sabz and Saremi, E. and Schisano, E. and Sheikhnezami, S. and Sadr, A. Vafaei and Wong, A. and Wong, O. I.},
+	month = dec,
+	year = {2020},
+	note = {arXiv: 2009.13346},
+	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+	pages = {3821--3837},
+	file = {arXiv Fulltext PDF:C\:\\Users\\matthew\\Zotero\\storage\\FWJETNMK\\Bonaldi et al. - 2020 - Square Kilometre Array Science Data Challenge 1 a.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\6C5R7J4H\\2009.html:text/html}
+}
