--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,8 +11,9 @@
 \newcommand{\PrelimWords}{Draft Copy \svnkw{Id}}
 %%\newcommand*{\mysvnrev}{\svnrev}
 \usepackage[hyperindex=true,
-			bookmarks=true,
-            pdftitle={}, pdfauthor={Xi Yang},
+            unicode,
+      			bookmarks=true,
+            pdftitle={}, pdfauthor={Matthew Alger},
             colorlinks=false,
             pdfborder=0,
             pagebackref=false,
@@ -54,7 +55,7 @@
 \usepackage{float}
 \urlstyle{sf}
 \renewcommand{\sfdefault}{uop}
-\usepackage[utf8]{inputenc}
+% \usepackage[utf8]{inputenc}  % ignore for xelatex!
 \usepackage[T1]{fontenc}
 \usepackage[scaled]{beramono}
 
