--- a/thesis/xid.tex
+++ b/thesis/xid.tex
@@ -1135,7 +1135,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
   regression, convolutional neural networks, and random forests.
 
   \subsection{Logistic Regression}
-  \label{sec:logistic-regression}
+  \label{sec:atlas-logistic-regression}
     Logistic regression is linear in the feature space and outputs the
     probability that the input has a positive label. The model is
     \citep{bishop06ml}:
@@ -1152,7 +1152,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     implementation of logistic regression with balanced classes}.
 
   \subsection{Convolutional neural networks}
-  \label{sec:convolutional-neural-networks}
+  \label{sec:atlas-convolutional-neural-networks}
 
     Convolutional neural networks (CNN) are a biologically-inspired prediction
     model for prediction with image inputs. The input image is convolved with
@@ -1185,7 +1185,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     architecture we use is shown in \autoref{fig:cnn}.
 
   \subsection{Random Forests}
-  \label{sec:random-forests}
+  \label{sec:atlas-random-forests}
 
     Random forests are an ensemble of decision
     trees~\citep{breiman01random-forest}. They consider multiple subsamples of
